--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch server.js",
+    "start": "node server.js",
     "test": "jest"
   },
   "author": "",
