--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.js --hashbang",
     "test": "jest"
   },
   "author": "",
@@ -16,11 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^11.10.0",
+    "firebase-functions": "^4.4.1",
     "googleapis": "^120.0.0",
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.4.0",
-    
     "mongoose": "^7.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.2",
