--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "scully": "scully --pjFirst",
     "test": "ng test"
   },
   "private": true,
@@ -40,6 +41,8 @@
     "@angular/cli": "~15.0.3",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/localize": "^15.0.0",
+    "@scullyio/init": "^2.1.41",
+    "@scullyio/scully": "^2.1.41",
     "@types/jasmine": "~4.3.0",
     "@types/uuid": "^9.0.1",
     "jasmine-core": "~4.5.0",
